[tool.poetry]
name = "estudo-reportlab"
version = "0.1.0"
description = ""
authors = ["gladson <gladsonbrito@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.5.62"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
